<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.programiranje_1.MainActivity">

    <ImageView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:background="@drawable/button"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />


    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startQuizButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".75" />

    <TextView
        android:id="@+id/textViewTezinaKviza"
        android:layout_width="143dp"
        android:layout_height="38dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="90dp"
        android:text="@string/level"
        android:textColor="#090908"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewBrojPitanja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewBrojPitanja"
        android:layout_width="194dp"
        android:layout_height="38dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/number_of_questions"
        android:textColor="#040303"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/startQuizButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />



    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".36" />

    <EditText
        android:id="@+id/editTextTezinaKviza"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="1-3"
        android:inputType="number"
        android:singleLine="true"
        android:text="2"
        app:layout_constraintBottom_toTopOf="@+id/editTextBrojPitanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextBrojPitanja"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="1-8"
        android:inputType="none|number"
        android:text="8"
        app:layout_constraintBottom_toTopOf="@+id/startQuizButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>